--- a/TEST_FOLDIER/css/style.css
+++ b/TEST_FOLDIER/css/style.css
@@ -94,7 +94,7 @@ html, body{
 	background:url(../images/MENUbg.png);
 	width:100%;
 	height:41px;
-	z-index:2;
+	z-index:5;
 }
 .menu{
 	margin:0 auto;
